--- a/locales/pt.json
+++ b/locales/pt.json
@@ -220,7 +220,7 @@
     "section5": "5. Dapp EqualsSport",
     "section6": "6. Dapp Bloco Premiado",
     "section7": "7. Nota do Autor",
-    "section8": "8. Agradecemos!",
+    "section8": "8. Agradecimentos!",
     
     "intro_title": "1. Introdução",
     "intro_paragraph": "Um whitepaper, por definição, é um documento oficial publicado por um governo ou uma organização internacional que serve como relatório ou guia sobre uma questão específica e suas possíveis soluções. Ao longo da história humana, a evolução tecnológica sempre atendeu a necessidades críticas. Nesse contexto, a tecnologia blockchain está revolucionando mercados inteiros com seu crescimento inevitável e poder transformador sem precedentes, introduzindo recursos que tornaram sua adoção imparável.",
@@ -291,7 +291,7 @@
     "authors_note_paragraph2": "As lições que aprendemos com o Bloco Premiado ficarão para sempre gravadas em nossa jornada. Percebemos o quanto a tecnologia blockchain ainda precisa evoluir para servir o público em geral, mas **nós fizemos funcionar** - seja por meio de RPCs premium, múltiplos contratos inteligentes realizando uma única função ou outras soluções. No final, funcionou brilhantemente porque temos essa natureza inerente de tentar e tentar novamente até o sucesso. Quando testemunhamos nossas avós, tios e amigos próximos fazendo suas primeiras compras de criptomoedas com apenas alguns cliques, vimos o quão **essencial a Equals9 realmente é** e como nossa missão tornou-se cada vez mais clara. No futuro, seremos lembrados como um dos projetos mais importantes que trouxeram criptomoedas para as massas.",
     "authors_note_paragraph3": "Por mais de seis anos, consistentemente provamos que os céticos estão errados, demonstrando que **estamos aqui para ficar**. Continuamos comprometidos em construir e inovar - este é o lugar onde sonhos se tornam metas.",
     
-    "thank_you_title": "8. Agradecemos!",
+    "thank_you_title": "8. Muito Obrigado!",
     
     "intro_paragraph1": "Bem-vindo à Equals9, um ecossistema blockchain pioneiro projetado para preencher a lacuna entre a tecnologia blockchain e aplicações do mundo real. Este whitepaper descreve nossa visão, componentes do ecossistema, tokenomics e roadmap futuro.",
     "intro_paragraph2": "Fundada em 2023, a Equals9 foi estabelecida com um propósito claro: criar soluções blockchain significativas que demonstrem a utilidade real da tecnologia de ledger distribuído além da especulação.",
