--- a/locales/en.json
+++ b/locales/en.json
@@ -54,6 +54,7 @@
     "digital_money": "Redefining digital finance! We are revolutionizing how people interact with digital money, enabling EQ9 tokens to serve as collateral for credit lines.",
     "music_nft": "Talent in motion! Experience the powerful fusion of music and NFTs. Support your favorite artists and earn rewards, or if you're an artist, launch your sound through EqualsNine Music.",
     "go_to_equalsvenue": "Go to EqualsVenue",
+    "go_to_equalssport": "Go to EqualsSport",
     "our_journey": "Our Journey",
     "growing_community": "A Growing Community",
     "timeline": {
