Improve English localization and fix whitepaper navigation/UX

--- a/locales/en.json
+++ b/locales/en.json
@@ -39,19 +39,19 @@
     "global_ranking": "Global Ranking and many more",
     "global_ranking_description": "Your place on top! With many local and global rankings, you can get exclusive prizes if you are among the best.",
     "staking": "Earn with your Champions by staking",
-    "staking_description": "Stake EQ9 on your favorite champions, and when they win, you also win, your balance will be frozen for at least 24h until you hit unstake, you earn based on; the amount and time your EQ9 balance is frozen on those players.",
-    "keep_building": "We Keep building",
+    "staking_description": "Stake EQ9 on your favorite champions. When they win, you win too! Your balance will be frozen for at least 24 hours or until you choose to unstake. Your earnings depend on both the amount and the duration your EQ9 is staked on those players.",
+    "keep_building": "We keep building",
     "keep_building_description_1": "Your money has never been so digital! We aim to revolutionize the way people use digital money, stake EQ9 as a collateral for credit lines.",
-    "keep_building_description_2": "Talent that moves! Music and NFTs, what a combination! Be ready to earn with favorite artists and if you are an artist yourself, launch your sound at equalsnine music.",
-    "payment_revolution": "Payment [R]evolution!, a place where you can enter a harvesting or locking program and, soon, where you find out which venue and partner in your city accepts EQ9 for their products and services.",
+    "keep_building_description_2": "Talent in motion! Music and NFTs—what a combination! Get ready to earn with your favorite artists, or, if you are an artist yourself, launch your music on EqualsNine Music.",
+    "payment_revolution": "Payment [R]evolution! Participate in yield harvesting or token locking programs, and soon discover which venues and partners in your city accept EQ9 for their products and services.",
     "signed_sealed": "Signed, Sealed, Delivered!",
-    "signed_sealed_description": "We rather talk about what we accomplished and how far we've come since we were founded in 2019, we wanted a working product before release our token to the public, and also to work together with regulators to avoid speculation on key dates.",
+    "signed_sealed_description": "We prefer to let our accomplishments speak for themselves. Since our founding in 2019, we aimed to have a working product before releasing our token to the public, and to collaborate with regulators to avoid speculation on key dates.",
     "community": "An Ever-Growing Community",
     "active_users": "Active Users",
     "supported_games": "Supported Games",
     "countries": "Countries",
     "join_community": "Join Our Community",
-    "digital_money": "Redefining digital finance! We are revolutionizing how people interact with digital money, enabling EQ9 tokens to serve as collateral for credit lines.",
+    "digital_money": "Redefining digital finance! We're revolutionizing how people interact with digital money by enabling EQ9 tokens to serve as collateral for credit lines.",
     "music_nft": "Talent in motion! Experience the powerful fusion of music and NFTs. Support your favorite artists and earn rewards, or if you're an artist, launch your sound through EqualsNine Music.",
     "go_to_equalsvenue": "Go to EqualsVenue",
     "go_to_equalssport": "Go to EqualsSport",
@@ -69,7 +69,7 @@
       "year2023_title": "Ecosystem Expansion",
       "year2023_description": "We expanded our ecosystem with new partnerships and enhanced features across all our DApps, significantly growing our user base and extending the utility of the EQ9 token.",
       "year2024_title": "The Winning Block Development",
-      "year2024_description": "We developed The Winning Block, our innovative lottery system where users can stake EQ9 tokens to win lucky NFTs, creating an exciting new way to participate in our ecosystem.",
+      "year2024_description": "We developed The Winning Block, our innovative lottery system where users can stake EQ9 tokens to win exclusive NFT prizes, creating an exciting new way to participate in our ecosystem.",
       "year2024_link": "Visit The Winning Block on Instagram",
       "year2025_title": "Global Recognition",
       "year2025_description": "Equals9 is working to gain global recognition as a leader in blockchain gaming and NFT technology. Our goal is to significantly expand our user base across our DApp ecosystem and build a thriving EQ9 token economy."
